Fixed hamburger icon not showing up

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ nav .nav-content {
     width: 25px;
     position: relative;
     visibility: hidden;
-    background-image: url('/burger-bar.png');
+    background-image: url('https://imbruglia100.github.io/teaShop/burger-bar.png');
     background-position: center;
     background-size: contain;
     float: right;
